<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollV"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    android:fillViewport="false" >

    <RelativeLayout
        android:id="@+id/relLay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_it_works" />

        <EditText
            android:id="@+id/text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:layout_toLeftOf="@+id/pickContact"
            android:hint="@string/hint_number"
            android:inputType="phone" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/pickContact"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_alignBaseline="@+id/text"
            android:layout_alignBottom="@+id/text"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_contacts" />

        <EditText
            android:id="@+id/textTouch"
            android:layout_width="fill_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/text"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_message"
            android:inputType="textMultiLine" />

        <CheckBox
            android:id="@+id/checkSaveOutbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textTouch"
            android:text="@string/checkbox_save_outbox" />

        <LinearLayout
            android:id="@+id/lineOnex"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/checkSaveOutbox"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button1"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_name" />

            <Button
                android:id="@+id/button2"
                style="@android:attr/buttonBarButtonStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_clear" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lineOnex"
            android:layout_marginTop="20dp"
            android:gravity="center" >

            <Button
                android:id="@+id/rateButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:background="@drawable/ic_rate"
                android:gravity="bottom" />

            <TextView
                android:id="@+id/textTouchx"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:gravity="center"
                android:text="@string/rate_it" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>